# internship-assessment

./: .env.example  .gitignore  PROJECT_README.md  README.md  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  server.py  tsconfig.json  vercel.json
api/: index.py  pipeline.py  sunbird_client.py
app/: globals.css  layout.tsx  page.tsx
app/api/: sunbird.ts
app/api/process-audio/: route.ts
app/api/process-text/: route.ts
exercises/: basics.py
